[package]
name = "quarry-operator"
version = "5.3.0"
description = "Delegates Quarry Rewarder authority roles."
edition = "2021"
homepage = "https://quarry.so"
repository = "https://github.com/QuarryProtocol/quarry"
authors = ["Quarry Protocol <team@quarry.so>"]
license = "AGPL-3.0"
keywords = ["solana", "quarry"]

[lib]
crate-type = ["cdylib", "lib"]
name = "quarry_operator"

[features]
default = ["cpi"]
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "^0.30.0"
anchor-spl = "^0.30.0"
quarry-mine = { path = "../quarry-mine", version = "5.3.0" }
solana-security-txt = "1.0.1"
vipers = { git = "https://github.com/stabbleorg/vipers", branch = "anchor-v0.30.0" }
