[package]
name = "quarry-redeemer"
version = "5.3.0"
description = "Redeems one token for another"
edition = "2021"
homepage = "https://quarry.so"
repository = "https://github.com/QuarryProtocol/quarry"
authors = ["Quarry Protocol <team@quarry.so>"]
license = "AGPL-3.0"
keywords = ["solana", "quarry"]

[lib]
crate-type = ["cdylib", "lib"]
name = "quarry_redeemer"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.0"
anchor-spl = "0.30.0"
solana-security-txt = "1.0.1"
vipers = { git = "https://github.com/stabbleorg/vipers", branch = "anchor-v0.30.0" }
