[package]
name = "quarry-registry"
version = "5.3.0"
description = "Registry of all quarries associated with a rewarder."
edition = "2021"
homepage = "https://quarry.so"
repository = "https://github.com/QuarryProtocol/quarry"
authors = ["Quarry Protocol <team@quarry.so>"]
license = "AGPL-3.0"
keywords = ["solana", "quarry"]

[lib]
crate-type = ["cdylib", "lib"]
name = "quarry_registry"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.0"
anchor-spl = "0.30.0"
quarry-mine = { path = "../quarry-mine", features = ["cpi"], version = "5.3.0" }
solana-security-txt = "1.0.1"
vipers = { git = "https://github.com/stabbleorg/vipers", branch = "anchor-v0.30.0" }
